sort.dutchflag.DutchFlagAlgo.scala.error
Compilation error:
DutchFlagAlgo:3: error: not found: value c
  while (c!=15){
         ^DutchFlagAlgo:17: error: not found: value c
    c=c+1
    ^