sort.dutchflag.DutchFlagAlgo.scala.code
def solve() {
  while (c!=15){
   for (i <- 1 to getTaille-1){
     for (j <- 1 to getTaille-i-1){
       if (getCouleur(i)==1){
         if (getCouleur(getTaille-j)==0 || getCouleur(getTaille-j)==2){
           echange(i,getTaille-j)
         }
     	 } else if (getCouleur(i)==1) {
         if (getCouleur(getTaille-j)==0){
           echange(i,getTaille-j)
         }
       }
   		}
		}
    c=c+1
	}
}